--- a/covidWarnApp/templates/home.html
+++ b/covidWarnApp/templates/home.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Profile Service</title>
+    <title>CovidWarn Service</title>
 </head>
 <body>
-    <h1>ProfileService</h1>
-    <img src="https://nden.com.ar/uploads/noticias/5/2020/08/20200812090356_deg.jpg" alt="Norbert">
-    <p>De Goas Edition</p>
+    <h1>CovidWarnService</h1>
+    <img src="https://conociendousa.com/wp-content/uploads/2019/10/STEVEN-SEAGAL-1024x576.jpg" alt="Steven">
+    <p>Seagal Edition</p>
 </body>
 </html>
